--- a/main.html
+++ b/main.html
@@ -1,15 +1,136 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    .block-heading h2 {
+      color: #3b99e0;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .summary {
+      background: #f7fbff;
+      border-top: 3px solid #5ea4f3;
+      padding: 20px;
+    }
+
+    .summary .btn {
+      background: #3b99e0;
+      border: none;
+      width: 100%;
+      padding: 10px;
+      font-weight: bold;
+    }
+
+    .product {
+      border-bottom: 1px solid #ddd;
+      padding: 15px 0;
+    }
+
+    .product img {
+      max-height: 80px;
+    }
+  </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="container my-5">
+
+    <!-- Block Heading -->
+    <div class="block-heading">
+      <h2>Shopping Cart</h2>
+    </div>
+
+    <div class="row">
+
+      <!-- LEFT COLUMN (Products) -->
+      <div class="col-lg-8">
+
+        <!-- Product 1 -->
+        <div class="product">
+          <div class="row align-items-center">
+            <div class="col-3">
+              <img src="https://via.placeholder.com/100" class="img-fluid">
+            </div>
+            <div class="col-5">
+              <h6>Product Name</h6>
+              <p class="text-muted">Example description text here</p>
+            </div>
+            <div class="col-4 text-end">
+              <span class="fw-bold">$49.99</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 2 -->
+        <div class="product">
+          <div class="row align-items-center">
+            <div class="col-3">
+              <img src="https://via.placeholder.com/100" class="img-fluid">
+            </div>
+            <div class="col-5">
+              <h6>Another Item</h6>
+              <p class="text-muted">More details about product</p>
+            </div>
+            <div class="col-4 text-end">
+              <span class="fw-bold">$29.99</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 3 -->
+        <div class="product">
+          <div class="row align-items-center">
+            <div class="col-3">
+              <img src="https://via.placeholder.com/100" class="img-fluid">
+            </div>
+            <div class="col-5">
+              <h6>Third Item</h6>
+              <p class="text-muted">Short description here</p>
+            </div>
+            <div class="col-4 text-end">
+              <span class="fw-bold">$19.99</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- RIGHT COLUMN (Summary) -->
+      <div class="col-lg-4">
+
+        <div class="summary">
+
+          <h5 class="mb-3">Summary</h5>
+
+          <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+            <span>Subtotal</span>
+            <span>$99.97</span>
+          </div>
+
+          <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+            <span>Tax</span>
+            <span>$8.00</span>
+          </div>
+
+          <div class="d-flex justify-content-between pb-2 mb-3">
+            <span class="fw-bold">Total</span>
+            <span class="fw-bold">$107.97</span>
+          </div>
+
+          <button class="btn btn-primary mt-3">Checkout</button>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
 
 </body>
 
